--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
       </head>
 <body>
 <div class="sale">
-<p><a href="">NEW GAME PLAY NOW NEW GAME PLAY NOW NEW GAME PLAY NOW</a></p>
+<p><a href="index.html">NEW GAME PLAY NOW NEW GAME PLAY NOW NEW GAME PLAY NOW</a></p>
 </div>
 <div class="container">
 
