--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
 	<div class="header2">
 		<h1> NEW AMIGOS DOLLS</h1>
 		<p>Subscribe and get an amigo to be by your side </p>
-		<button>Subscribe</button>
+		<button><a href="form.html">Subscribe</a></button>
 <img src="images/win.png"></a>
 <hr>
 <h4>Meet us!</h4>
